@@ -105,7 +105,9 @@ public:
 	virtual bool GetSamplePosition(luxrays::Ray *eyeRay, float *filmX, float *filmY) const;
 	virtual bool SampleLens(const float time, const float u1, const float u2,
 		luxrays::Point *lensPoint) const;
-	virtual float GetPDF(const luxrays::Ray &eyeRay, const float filmX, const float filmY) const;
+	virtual void GetPDF(const luxrays::Ray &eyeRay, const float eyeDistance,
+		const float filmX, const float filmY,
+		float *pdfW, float *fluxToRadianceFactor) const;
 
 	virtual luxrays::Properties ToProperties() const;
 
