@@ -7,7 +7,7 @@ path.hybridbackforward.partition = 0.0
 path.photongi.photon.maxcount = 100000000
 path.photongi.photon.maxdepth = 4
 path.photongi.indirect.enabled = 0
-path.photongi.caustic.enabled = 1
+path.photongi.caustic.enabled = 0
 path.photongi.caustic.lookup.radius = 0.4
 path.photongi.caustic.maxsize = 100000
 path.photongi.caustic.updatespp = 16
