@@ -50,7 +50,7 @@ using namespace slg;
 // License : MIT
 // http://opensource.org/licenses/MIT
 //
-//https://github.com/sp4cerat/Fast-Quadric-Mesh-Simplification
+// https://github.com/sp4cerat/Fast-Quadric-Mesh-Simplification
 //
 // 5/2016: Chris Rorden created minimal version for OSX/Linux/Windows compile
 
