@@ -21,11 +21,13 @@
 * Added the support for screen space subdivision limit to SubdivShape
 * Using/Not using any type of transparency doesn't requires OpenCL compilation anymore (removed PARAM_HAS_PASSTHROUGH conditional OpenCL compilation)
 * Added an Harlequin shape (mostly to debug meshes)
+* Added a Simplify shape (to decimate the number of triangles in a mesh with the smaller possible error)
 
 ### Fixed Bugs
 
 * Fixed triangle lights back face emission when using an IES or image map profile
 * Fixed OpenCL code for rotate triangle light when using IES or image map profile (BlendLuxCore iusse #310)
+* Fixed light tracing when using orthographic camera
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
